--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "contatooh",
   "version": "1.0.0",
-  "description": "",
+  "description": "Projeto de estudo no MEAN",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Iarlen Aquiles",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.6.7",
