--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "contatooh",
   "version": "1.0.0",
   "description": "Projeto de estudo no MEAN",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Iarlen Aquiles",
   "license": "ISC",
@@ -14,5 +15,13 @@
     "express": "^4.8.8",
     "express-load": "^1.1.16",
     "method-override": "^2.1.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iarlenaquiles/contatooh.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iarlenaquiles/contatooh/issues"
+  },
+  "homepage": "https://github.com/iarlenaquiles/contatooh#readme"
 }
